# shape-reconstructor

./: .gitignore  .gitmodules  Axis.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CudaTexture.hpp  Doxyfile  FileUtils.hpp  Grid.cpp  Grid.hpp  Gyzmo.cpp  Image.hpp  KeyListener.cpp  KeyListener.hpp  Lines.hpp  Mesh.cpp  Mesh.hpp  Model.hpp  OverlayPlane.cpp  OverlayPlane.hpp  README.md  ShaderPipeline.cpp  SkyBox.cpp  SkyBox.hpp  SphereSDF.cpp  SphereSDF.hpp  Texture2D.hpp  Todo.md  UnitCube.cpp  UnitCube.hpp  Utils.hpp  VolumeRendering.cpp  VolumeRendering.hpp  WorldTransform.cpp  WorldTransform.hpp  interop.c  interop.h  main.cpp
docs/: index.html
include/glad/: glad.c  glad.h
python/: Calibration.py  DatasetSpliter.py  FaceDataset.py  ResNetP.py  TilingTest.py  generate_tensors.py  image_entity.py  img_plot.py  main.py  mean_ldmks.txt  neus_test.py  noise_dist.py  pre_processing.py  raw.py  requirements.txt  resize.py  stds_per_intensity.npy  stds_per_intensity_g1.npy  test_indices_2000.txt  tests.py  train_indices_20000.txt  utils.py
python/exp1/: blue_stds_cs.npy  blue_stds_ys.npy  blue_stds_ysdx.npy  green1_stds_cs.npy  green1_stds_ys.npy  green1_stds_ysdx.npy  green2_stds_cs.npy  green2_stds_ys.npy  green2_stds_ysdx.npy  red_stds_cs.npy  red_stds_ys.npy  red_stds_ysdx.npy
src/: SVO.cpp  SVO.h  main.cpp
src/controllers/AppController/: AppController.hpp
src/controllers/Scene/: Scene.cpp  Scene.hpp
src/cuda/: Adam.cu  Adam.cuh  BitUtils.cuh  CT3DVolume3D.cuh  Common.cuh  Convolutions.cu  Convolutions.cuh  CudaLinearVolume3D.cuh  CudaRayCaster.cuh  CudaSparseVolume3D.cuh  CudaSurface3D.cu  CudaSurface3D.cuh  GPUData.cuh  IntegrationRange.cu  IntegrationRange.cuh  Losses.cuh  Octree.hpp  PlaneCutRendering.cu  PlaneCutRendering.cuh  Projection.cuh  RayCasterParams.cuh  SingleRayCaster.cuh  SparseVolumeUtils.cu  SparseVolumeUtils.cuh  Utils.cuh  Volume.cu  Volume.cuh  VolumeRendering.cu  VolumeRendering.cuh  assert_cuda.c  assert_cuda.h  kernel.cu  kernel.cuh  utils.cuh  volumeRendering.cuh
src/interactors/: AdamInteractor.cpp  AdamInteractor.hpp  CameraEditorInteractor.hpp  CameraInteractor.cpp  CameraInteractor.hpp  CameraSetInteractor.cpp  CameraSetInteractor.hpp  ImageSetInteractor.cpp  ImageSetInteractor.hpp  NeRFInteractor.cpp  NeRFInteractor.hpp  ObjectListInteractor.cpp  ObjectListInteractor.hpp  PlaneCutInteractor.cpp  PlaneCutInteractor.hpp  SceneObjectInteractor.cpp  SceneObjectInteractor.hpp  SimpleRayCasterInteractor.cpp  SimpleRayCasterInteractor.hpp  Volume3DInteractor.cpp  Volume3DInteractor.hpp  VolumeRendererInteractor.cpp  VolumeRendererInteractor.hpp
src/maths/: MMath.hpp  Morton.h
src/model/: AdamOptimizer.cpp  AdamOptimizer.hpp  Camera.cpp  Camera.hpp  CudaBuffer.hpp  CudaTexture.hpp  CudaVolume3DBuffer.hpp  DenseFloat32Volume.cpp  DenseFloat32Volume.hpp  Image.hpp  ImageSet.cpp  ImageSet.hpp  Mesh.cpp  Mesh.hpp  Model.hpp  Octree.hpp  PlaneCut.cpp  PlaneCut.hpp  RayMarcher.hpp  ShaderPipeline.cpp  ShaderPipeline.hpp  SparseVolume3D.cpp  SparseVolume3D.hpp  SphereSDF.cpp  SphereSDF.hpp  Texture2D.hpp  UniqId.hpp  Volume3D.cpp  Volume3D.hpp  VolumeRenderer.cpp  VolumeRenderer.hpp
src/model/Buffer/: Buffer.hpp
src/model/Calibration/: OpenCVCalibrator.hpp
src/model/Camera/: Camera.cpp  Camera.hpp  CameraSet.cpp  CameraSet.hpp  MCamera.hpp
src/model/DataLoader/: DataLoader.cpp  DataLoader.hpp
src/model/Dataset/: Dataset.hpp  NeRFDataset.cpp  NeRFDataset.hpp
src/model/Distribution/: NormalDistributionClamped.hpp  UniformDistribution.hpp
src/model/GPUDataStruct/: GPUData.hpp
src/model/Gaussian/: GPUGaussianKernelData.cpp  GPUGaussianKernelData.hpp
src/model/Listener/: Listener.hpp
src/model/Octree/: OctreeStructs.h  SVO.cpp  SVO.h
src/model/RayCaster/: Ray.h  Ray.hpp  RayCaster.hpp  SingleRayCaster.cpp  SingleRayCaster.hpp
src/model/Statistics/: ScrollingBuffer.h  Statistics.cpp  Statistics.h  StatsType.h
src/model/SuperResolution/: SuperResolutionModule.cpp  SuperResolutionModule.h
src/model/Volume/: DenseVolume3D.cpp  DenseVolume3D.hpp  SparseVolume3D.cpp  SparseVolume3D.hpp  Volume3D.h
src/shaders/: f_grid.glsl  f_lines.glsl  f_mesh.glsl  f_overlay_plane.glsl  f_plane.glsl  f_shader.glsl  f_skybox.glsl  v_grid.glsl  v_lines.glsl  v_overlay_plane.glsl  v_plane.glsl  v_points.glsl  v_shader.glsl  v_skybox.glsl
src/utils/: Projection.h  Projection.hpp  SceneGlobalVariables.hpp  SceneSettings.cpp  SceneSettings.hpp  Utils.hpp  filesystem.h
src/view/: Gizmo.cpp  Gizmo.hpp  Grid.cpp  Grid.hpp  ImageSet.cpp  ImageSet.hpp  LineGrid.cpp  LineGrid.hpp  Lines.cpp  Lines.hpp  Model.hpp  OverlayPlane.cpp  OverlayPlane.hpp  Plane.cpp  Plane.hpp  PointCloud.cpp  PointCloud.h  SkyBox.cpp  SkyBox.hpp  UnitCube.cpp  UnitCube.hpp  Volume3D.cpp  Volume3D.hpp
src/view/CameraPixelRays/: CameraPixelRays.hpp
src/view/ImUI/: CameraEditorView.hpp  ImageViewer.hpp  InspectorView.cpp  InspectorView.hpp  ObjectListItem.cpp  ObjectListItem.hpp  ObjectListView.cpp  ObjectListView.hpp  StatsView.cpp  StatsView.h  ViewPort.hpp
src/view/ImUI/Inspectors/: AdamEditor.hpp  CameraInspector.hpp  CameraSetInspector.hpp  ImageSetEditor.hpp  ImageSetInspector.hpp  NeRFInspector.hpp  PlaneCutEditor.hpp  SimpleRayCasterEditor.hpp  VolumeEditor.hpp  VolumeRendererEditor.hpp
src/view/Renderable/: Renderable.hpp
src/view/SceneObject/: SceneObject.hpp
src/view/Wireframe/: Wireframe.hpp
tests/: main.test.cpp
